<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fast Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_your_d">Plan Your Day In\nDetails</string>
    <string name="there_are_m">There Are Many Variations Of\nPassages There Are Many Variations.</string>
    <string name="login_account">Login Account</string>
    <string name="welcome_back">Welcome back! Let\'s tackle tasks together.</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add</string>
    <string name="task_list">Task List</string>
    <string name="add_task">Add Task</string>
    <string name="create_new_task">Create New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="category_create">Category</string>
    <string name="all_categories">All</string>
    <string name="search_text">Search Task</string>
    <string name="task_coincidences">Coincidences</string>
    <string name="add_task_plus">+ Add Task</string>
    <string name="task_today">Task Today</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="howAmI">How am I?</string>
    <string name="tasks">Tasks</string>
    <string name="logout">Logout</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright">© 2024 CodersDeLaConsola</string>
</resources>