<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_none_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_user"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintBottom_toTopOf="@id/tvNameUser">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_none_usuario_two"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btn_get_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:background="@drawable/circle_edit_image_user"
            app:layout_constraintEnd_toEndOf="@id/rl_none_user"
            app:layout_constraintBottom_toBottomOf="@id/rl_none_user">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_two_24"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.3"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            tools:text="Valen"
            style="@style/subtitle"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/rl_none_user"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintWidth_percent="0.3"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h2_text"
                android:textColor="@color/white"
                android:text="@string/howAmI"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/divider_background"/>

            <TextView
                android:id="@+id/tvDescrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                style="@style/h4_text"
                tools:text="I am a fun persfddfon,I like to go for walks and exercise"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h4_text"
                android:textColor="@color/white"
                android:text="@string/tasks"/>

            <TextView
                android:id="@+id/tvTotalTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle"
                android:textColor="@color/white"
                tools:text="57"/>

        </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_primary"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_primary"
        app:layout_constraintTop_toBottomOf="@id/contentHeader"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogout"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_logout"
            android:text="@string/logout"/>

        <ImageView
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/divider_background"/>

        <TextView
            android:id="@+id/tvRate"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_star"
            android:text="@string/rate"/>

        <ImageView
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/divider_background"/>

        <TextView
            android:id="@+id/tvPrivacity"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:text="@string/privacy_policy"/>

        <ImageView
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/divider_background"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_home"
        app:backgroundTint="@color/primary"
        app:fabSize="normal"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_primary"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_primary"
        app:layout_constraintBottom_toTopOf="@id/tvCopyrigth"/>

    <TextView
        android:id="@+id/tvCopyrigth"
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background_3"
        android:text="@string/copyright"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_primary"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_primary"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>