<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hometask.maintask.MainTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Daily Meals">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content_text_saludo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/tvSaludo"
                        android:layout_width="0dp"
                        app:layout_constraintWidth_percent="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:fontFamily="@font/abeezee"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textStyle="bold"
                        android:text="Hello, Tony"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civUser"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_none_usuario"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabFilterTask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                    app:layout_constraintTop_toBottomOf="@id/content_text_saludo"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMode="fixed"
                    app:tabRippleColor="@null"
                    app:tabPaddingStart="2dp"
                    app:tabPaddingEnd="2dp"
                    android:background="@color/white"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contentHeaderCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
                    app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
                    app:layout_constraintTop_toBottomOf="@id/tabFilterTask">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/subtitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/categories"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivFilterCategories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_filter_24"
                            android:layout_marginEnd="10dp"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnAllCategories"
                            android:layout_width="70dp"
                            android:layout_height="40dp"
                            style="@style/button_primary"
                            android:text="@string/all_categories"/>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
                    app:layout_constraintTop_toBottomOf="@id/contentHeaderCategory"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.08" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.92" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_list_task_background"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvCategories">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_task_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_task"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_task"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_list"
                    style="@style/h2_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/button_primary"
                    android:text="@string/add_task"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/divider_background"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_task"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_task"
                app:layout_constraintTop_toBottomOf="@id/content_task_list"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_task"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_task"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_start_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_end_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.92" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>